--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,9 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
+[*.{ts,js,jsx,tsx,cjs,json}]
+indent_size = 2
+
 [*.{yml,yaml}]
 indent_size = 2
 
