--- a/package.json
+++ b/package.json
@@ -1,20 +1,53 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "@inertiajs/react": "^1.0.11",
-        "@vitejs/plugin-react": "^3.1.0",
-        "autoprefixer": "^10.4.15",
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.8.0",
-        "postcss": "^8.4.28",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "tailwindcss": "^3.3.3",
-        "vite": "^4.0.0"
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "prepare": "husky install",
+    "lint:js": "eslint --ext .js,.jsx,.ts,.tsx ./resources",
+    "lint:style": "stylelint \"resources/**/*.css\"",
+    "lint:prettier": "prettier -c --write \"resources/**/*\"",
+    "lint-staged": "lint-staged",
+    "commit": "./node_modules/cz-customizable/standalone.js"
+  },
+  "lint-staged": {
+    "resources/**/*.css": "stylelint",
+    "resources/**/*.{js,jsx,ts,tsx}": "eslint --ext .js,.jsx,.ts,.tsx",
+    "resources/**/*.{js,jsx,tsx,ts,css,md,json}": "prettier --ignore-unknown --write"
+  },
+  "devDependencies": {
+    "@commitlint/config-conventional": "^17.7.0",
+    "@inertiajs/react": "^1.0.11",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.15",
+    "axios": "^1.1.2",
+    "commitlint": "^17.7.1",
+    "commitlint-config-gitmoji": "^2.3.1",
+    "cz-customizable": "^7.0.0",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "laravel-vite-plugin": "^0.8.0",
+    "lint-staged": "^14.0.1",
+    "postcss": "^8.4.28",
+    "postcss-less": "^6.0.0",
+    "prettier": "^3.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-order": "^6.0.3",
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.0.0"
+  },
+  "config": {
+    "cz-customizable": {
+      "config": ".cz-config.cjs"
     }
+  }
 }
