--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.7.0",
-    "@inertiajs/react": "^1.0.11",
+    "@types/node": "^20.5.7",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.15",
-    "axios": "^1.1.2",
     "commitlint": "^17.7.1",
     "commitlint-config-gitmoji": "^2.3.1",
     "cz-customizable": "^7.0.0",
@@ -43,7 +44,12 @@
     "stylelint-config-standard": "^34.0.0",
     "stylelint-order": "^6.0.3",
     "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
     "vite": "^4.0.0"
+  },
+  "dependencies": {
+    "@inertiajs/react": "^1.0.11",
+    "axios": "^1.1.2"
   },
   "config": {
     "cz-customizable": {
