--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss": "^8.4.28",
     "postcss-less": "^6.0.0",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stylelint": "^15.10.3",
