--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{ts,js,jsx,tsx,cjs,json}]
+[*.{ts,js,jsx,tsx,cjs,json,css}]
 indent_size = 2
 
 [*.{yml,yaml}]
